# shepherdr

./: .gitignore  Cargo.toml  mise.toml  renovate.json  rust-toolchain.toml  rustfmt.toml  treefmt.toml  yamlfmt.yaml
.github/workflows/: clippy.yaml  commitlint.yaml  test.yaml  treefmt.yaml
crates/shepherdr-core/: Cargo.toml
crates/shepherdr-core/src/: config.rs  lib.rs  logging.rs  monitor.rs  procinfo.rs  reload.rs  spawn.rs  state.rs  stop.rs
docs/design-doc/: README.md  architecture.md  config.example.toml  distribution.md  operations.md  principles.md  service-management.md  ui.md
