[workspace]
resolver = "3"
members = ["crates/shepherdr-core"]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.lints.clippy]
# restriction lints (opt-in individually)
absolute_paths = "deny"
all = "deny"
allow_attributes_without_reason = "deny"
clone_on_ref_ptr = "deny"
manual_assert = "deny"
mod_module_files = "deny"
panic = "deny"
pedantic = "deny"
unused_trait_names = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
warnings = "deny"
