[package]
name = "shepherdr-core"
version.workspace = true
edition.workspace = true

[dependencies]
bytesize = "2.4.2"
humantime = "2.4.0"
humantime-serde = "1.1.1"
nix = { version = "0.31.3", features = ["user"] }
rustc-hash = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"

[lints]
workspace = true
