[package]
name = "shepherdr-core"
version.workspace = true
edition.workspace = true

[dependencies]
bytesize = "2.4.2"
humantime = "2.4.0"
humantime-serde = "1.1.1"
libc = "0.2.189"
nix = { version = "0.31.3", features = ["signal", "user"] }
rustc-hash = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = {
  version = "1.53.1",
  default-features = false,
  features = ["io-util", "process", "rt", "time"]
}
toml = "1.1.2"

[dev-dependencies]
tokio = { version = "1.53.1", default-features = false, features = ["macros"] }

[lints]
workspace = true
